# supplier_service_test

./: BUILD.bazel  init_integration.go  setup.go
api/contact_management/: BUILD.bazel  get_suppliers_test.go  testmain_test.go  upsert_supplier_test.go
api/contact_management/testdata/: filter_by_1_supplier_id.golden  filter_with_all_status.golden  filter_with_status_inactive.golden  filter_with_supplier_has_order_schedule.golden  get_all_epic_1148.golden  happy_case.golden  happy_case_with_pagination.golden  status_not_effect.golden
demand_planning/: BUILD.bazel  jira.go  service.go  test_container.go  tests_suite.go  unittest.json
demand_planning/api/: BUILD.bazel  get_daily_forecast_test.go  get_demand_planning_test.go  testmain_test.go  update_daily_forecast_test.go  update_demand_planning_test.go  upsert_demand_planning_test.go
demand_planning/api/testdata/get_daily_forecast/: happy_case_without_is_sku_demand.golden
demand_planning/api/testdata/update_daily_forecast/: error_update_time_in_past_site_sku_demand.golden  success_happy_case_site_group_demand.golden  success_happy_case_site_sku_demand.golden
demand_planning/api/testdata/update_demand_planning/: success_happy_case_site_group_demand.golden  success_happy_case_site_sku_demand.golden
demand_planning/api/testdata/upsert_demand_planning/: error_case_import_budget_category_is_not_master.golden  error_case_import_forecast_only_segment_or_category.golden  error_case_import_forecast_update_in_past.golden  happy_case_import_budget.golden  happy_case_import_forecast_case_category.golden  happy_case_import_forecast_case_segment.golden  happy_case_import_forecast_insert_in_future.golden
demand_planning/internal/consumer/: BUILD.bazel  export_budget_test.go  export_forecast_test.go  testmain_test.go
demand_planning/internal/consumer/testdata/export_budget/: req_export_a_half_year_then_return_success.golden  req_export_a_half_year_then_return_success.xlsx  req_export_but_db_empty_data_then_return_success.golden  req_export_but_db_empty_data_then_return_success.xlsx  req_export_multi_year_then_return_success.golden  req_export_multi_year_then_return_success.xlsx
demand_planning/internal/consumer/testdata/export_forecast/: req_export_forecast_cate_site_0_month_6.golden  req_export_forecast_cate_site_0_month_6.xlsx  req_export_forecast_cate_site_1_month_6.xlsx  req_export_forecast_cate_site_1_month_6_cate_1.golden  req_export_forecast_cate_site_1_month_6_cate_1.xlsx  req_export_forecast_seg_site_0_month_6.golden  req_export_forecast_seg_site_0_month_6.xlsx  req_export_forecast_seg_site_1_month_6.xlsx  req_export_forecast_seg_site_1_month_6_cate_1.golden  req_export_forecast_seg_site_1_month_6_cate_1.xlsx
demand_planning/internal/job/: BUILD.bazel  enrich_catalog_data_test.go  enrich_dwh_data_test.go  migrate_segment_test.go  testmain_test.go
demand_planning/internal/job/parquet/: shop.parquet  sku_merchant_monthly.parquet  sku_merchant_shop_monthly.parquet  sku_shop_daily.parquet  vnshop_product.parquet
demand_planning/internal/job/test_data/migrate_segment/: duplicate_category.xlsx  happy_case.xlsx  not_found_category_and_attribute.xlsx  row_group_length.xlsx
demand_planning/internal/job/testdata/enrich_catalog_data/: happy_case_enrich_catalog_data_successful.golden
demand_planning/internal/job/testdata/enrich_dwh_data/: happy_case_enrich_data_from_minio_failed.golden  happy_case_enrich_dwh_data_successful.golden
demand_planning/internal/job/testdata/migrate_segment/: duplicate_category.golden  happy_case.golden  row_group_length.golden
demand_planning/internal/schedule_job/: BUILD.bazel  calculate_demand_test.go  sync_site_sku_demand_test.go  testmain_test.go
demand_planning/internal/schedule_job/testdata/: happy_case_update_all_site_group_demand.golden  happy_case_update_all_site_sku_demand.golden  happy_case_update_site_group_demand.golden  happy_case_update_site_group_demand_skip_reset_daily_forecast.golden  happy_case_update_site_sku_demand.golden  happy_case_update_site_sku_demand_skip_reset_daily_forecast.golden
internal/consumer/: BUILD.bazel  export_supplier_delivery_test.go  export_supplier_terms_test.go  export_suppliers_test.go  testmain_test.go
internal/consumer/test_data/export_supplier_terms/: 200_export_all_sheet.xlsx  200_export_all_sheet_omni_1589.xlsx  200_export_sheet_supplier_site_with_filter.xlsx  200_export_sheet_supplier_site_without_filter.xlsx  200_export_sheet_thong_tin_chung_with_filter.xlsx  200_export_sheet_thong_tin_chung_without_filter.xlsx
internal/consumer/testdata/export_supplier_terms/: 200_export_all_sheet.golden  200_export_all_sheet_omni_1589.golden  200_export_sheet_supplier_site_with_filter.golden  200_export_sheet_supplier_site_without_filter.golden  200_export_sheet_thong_tin_chung_with_filter.golden  200_export_sheet_thong_tin_chung_without_filter.golden
