load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "get_suppliers_test.go",
        "testmain_test.go",
        "upsert_supplier_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        "//app/supplychain/supplier_service/api:go_default_library",
        "//app/supplychain/supplier_service/config:go_default_library",
        "//app/supplychain/supplier_service/internal/adapter/audit_log:go_default_library",
        "//app/supplychain/supplier_service/internal/adapter/flagsup:go_default_library",
        "//app/supplychain/supplier_service/internal/adapter/identity:go_default_library",
        "//app/supplychain/supplier_service/internal/adapter/seller_service:go_default_library",
        "//app/supplychain/supplier_service/internal/adapter/srm:go_default_library",
        "//app/supplychain/supplier_service/internal/model:go_default_library",
        "//app/supplychain/supplier_service/internal/provider:go_default_library",
        "//app/supplychain/supplier_service/internal/repository:go_default_library",
        "//app/supplychain/supplier_service/internal/rpcimpl:go_default_library",
        "//app/supplychain/supplier_service/internal/service:go_default_library",
        "//app/supplychain/supplier_service/internal/transformer:go_default_library",
        "//app/supplychain/supplier_service/internal/validator:go_default_library",
        "//app/supplychain/supplier_service/pkg/constant:go_default_library",
        "//app/supplychain/supplier_service/pkg/errorz:go_default_library",
        "//app/supplychain/supplier_service/pkg/faker:go_default_library",
        "//app/supplychain/supplier_service/pkg/helper:go_default_library",
        "//app/supplychain/supplier_service/tests:go_default_library",
        "//library/log:go_default_library",
        "//library/test/monkey:go_default_library",
        "@com_github_sebdah_goldie_v2//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
        "@io_gorm_datatypes//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
