load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "test_data",
    srcs = glob([
        "testdata/**",
        "test_data/**",
        "parquet/**",
    ]),
)

go_test(
    name = "go_default_test",
    srcs = [
        "enrich_catalog_data_test.go",
        "enrich_dwh_data_test.go",
        "migrate_segment_test.go",
        "testmain_test.go",
    ],
    data = [
        ":test_data",
        "//app/supplychain/demand_planning_service:lite_migration_files",
        "//app/supplychain/demand_planning_service:migration_files",
    ],
    deps = [
        "//app/catalog/api:go_default_library",
        "//app/supplychain/demand_planning_service/config:go_default_library",
        "//app/supplychain/demand_planning_service/internal/adapter/catalog:go_default_library",
        "//app/supplychain/demand_planning_service/internal/adapter/google_sheet:go_default_library",
        "//app/supplychain/demand_planning_service/internal/jobs/enrich_catalog_data:go_default_library",
        "//app/supplychain/demand_planning_service/internal/jobs/enrich_dwh_data:go_default_library",
        "//app/supplychain/demand_planning_service/internal/jobs/migrate_segment:go_default_library",
        "//app/supplychain/demand_planning_service/internal/mocks/adapter/catalog:go_default_library",
        "//app/supplychain/demand_planning_service/internal/mocks/adapter/catalog_grpc:go_default_library",
        "//app/supplychain/demand_planning_service/internal/mocks/adapter/whcentral:go_default_library",
        "//app/supplychain/demand_planning_service/internal/model:go_default_library",
        "//app/supplychain/demand_planning_service/internal/repository:go_default_library",
        "//app/supplychain/demand_planning_service/mocks/faker:go_default_library",
        "//app/supplychain/demand_planning_service/pkg/helper:go_default_library",
        "//app/supplychain/demand_planning_service/tests:go_default_library",
        "//library/integrationtest:go_default_library",
        "//library/log:go_default_library",
        "//library/test/monkey:go_default_library",
        "@com_github_360entsecgroup_skylar_excelize_v3//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap:go_default_library",
        "@com_github_minio_minio_go_v7//:go_default_library",
        "@com_github_sebdah_goldie_v2//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_gorm_gorm//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
